# FortunesPlasmoid

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  FortuneWidget.kdev4  Makefile  Messages.sh  README.md  cmake_install.cmake  compile_commands.json  ecm_uninstall.cmake  install_manifest.txt  make_and_show.sh  regenerateindex.sh  spustit.sh
src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fortunewidget.cpp  fortunewidget.h  org.kde.plasma.fortunepokus-plasmoids-metadata.json  org.kde.plasma.fortunepokus.appdata.xml
src/package/: metadata.desktop
src/package/contents/ui/: main.qml
src/plugin/: CMakeLists.txt  CTestTestfile.cmake  Makefile  backend.cpp  backend.h  cmake_install.cmake  plasmoidplugin.cpp  plasmoidplugin.h  qmldir
